# forest_traversal

./: CMakeLists.txt  README.md
src/: Bridge.cpp  Bridge.h  CMakeLists.txt  Scenario.cpp  Scenario.h  Utilities.cpp  Utilities.h  YamlParseError.h  main.cpp
src/test/: CMakeLists.txt  TestScenarios.cpp
src/test/resources/: scala_compute_provided_scenario.yaml  test_scenario_bad_one.yaml  test_scenario_bad_two.yaml  test_scenario_empty.yaml  test_scenario_four.yaml  test_scenario_three.yaml  test_scenario_two.yaml
src/tps/: quick_arg_parser.hpp
